// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSearchIntents should render in error state 1`] = `
<div>
  <span
    data-test="searchIntents-error"
  >
    An awesome, fascinating and incredible error
  </span>
</div>
`;

exports[`useSearchIntents should render in loading state 1`] = `
<div>
  <span
    data-test="searchIntents-loading"
  >
    yes
  </span>
</div>
`;

exports[`useSearchIntents should render with the initial state 1`] = `
<div>
  <span
    data-test="searchIntents-redirectUrl"
  />
  <button
    data-test="searchIntents-getButton"
  >
    get search intents request
  </button>
  <button
    data-test="searchIntents-resetButton"
  >
    reset search state
  </button>
</div>
`;
